For some reason absolute divs being dragged outside viewport on mobile expands the viewport, like some sort of reverse zoom-in. Trying fixed, which might blow up firefox mobile all things considered.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,11 +38,6 @@ nav {
   height: 100dvh;
   padding: 1rem;
 }
-main {
-  position: absolute;
-  inset: 0;
-}
-
 /* SMALL META */
 a {
   color: inherit;
@@ -236,7 +231,7 @@ header .shortcut-area {
 }
 /* FILE EXPLORER */
 .window {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   display: flex;
